# jupyter-mcp

./: pyproject.toml
app/: main.py  notebook_manager.py  types.py
