[project]
name = "jupyter-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi-mcp>=0.2.0",
    "fastapi[standard]>=0.115.12",
    "ipykernel>=6.29.5",
    "jupyter-client>=8.6.3",
    "loguru>=0.7.3",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
]
